# front/src/app/utils/api.ts
@@ -16,13 +16,72 @@ export const apiPing = async () => {
     });
 };
 
-export const createParty = async (data: any) => {
-  api
-    .post("/party", data)
-    .then((response) => {
-      console.log(response.data);
-    })
-    .catch((error) => {
-      console.log(error);
+type User = {
+  pseudo: string;
+  email: string;
+  password: string;
+};
+
+export const registerUser = async (data: User) => {
+  try {
+    const response = await api.post<User>("/auth/register", data);
+    return response; // Retourner les données de la réponse
+  } catch (error) {
+    console.error("Erreur lors de l'inscription :", error);
+    throw error; // Relancer l'erreur pour qu'elle puisse être gérée
+  }
+};
+
+export const loginUser = async (data: { email: string; password: string }) => {
+  try {
+    const response = await api.post("/auth/login", data);
+    return response; // Retourner les données de la réponse
+  } catch (error) {
+    console.error("Erreur lors de la connexion :", error);
+    throw error; // Relancer l'erreur pour qu'elle puisse être gérée
+  }
+};
+
+type Salon = {
+  name: string;
+  password: string;
+  code: string;
+  createdBy: User;
+  participants: User[];
+  messages: {
+    sender: User;
+    content: string;
+    timestamp: Date;
+  }[];
+};
+
+export const createParty = async (
+  data: Partial<Salon>,
+  accessToken: string
+) => {
+  try {
+    const response = await api.post<Partial<Salon>>("/salons/create", data, {
+      headers: {
+        Authorization: `Bearer ${accessToken}`,
+      },
     });
+    return response; // Retourner les données de la réponse
+  } catch (error) {
+    console.error("Erreur lors de la création du salon :", error);
+    throw error; // Relancer l'erreur pour qu'elle puisse être gérée
+  }
+};
+
+export const joinParty = async (data: Partial<Salon>, accessToken: string) => {
+  try {
+    const response = await api.post("/salons/join", data, {
+      headers: {
+        Authorization: `Bearer ${accessToken}`,
+      },
+    });
+    return response; // Retourner les données de la réponse
+  } catch (error) {
+    console.error("Erreur lors de la connexion au salon :", error);
+    throw error; // Relancer l'erreur pour qu'elle puisse être gérée
+  }
 };
